# loyalty-radar

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PRIVACY.md  README.md  README.zh-CN.md  SECURITY.md  TRADEMARKS.md  pyproject.toml
.agents/plugins/: marketplace.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  install.yml  source.yml
.github/scripts/: build_public_site.py  changed_source_ids.py  generate_outreach.py  growth_metrics.py  live_source_health.py  package_release.py  screenshot_smoke.py  source_health_escalation.py  validate_distribution.py  validate_pages.py
.github/workflows/: ci.yml  ecosystem-smoke.yml  growth-metrics.yml  pages.yml  public-brief-merged.yml  release.yml  source-health.yml  source-pr-health.yml  weekly-public-brief.yml
docs/: architecture.md  growth-operations.md  migration-from-loyalty-intel-digest.md  source-contribution.md
docs/site/: index.html
docs/site/assets/: catalog.js  site.css
docs/site/en/: index.html
docs/site/en/latest/: index.html
docs/site/en/sources/: index.html
docs/site/sources/: index.html
docs/site/zh-CN/: index.html
docs/site/zh-CN/latest/: index.html
docs/site/zh-CN/sources/: index.html
plugins/loyalty-radar/.codex-plugin/: plugin.json
plugins/loyalty-radar/skills/loyalty-radar/: SKILL.md  requirements.txt
plugins/loyalty-radar/skills/loyalty-radar/agents/: openai.yaml
plugins/loyalty-radar/skills/loyalty-radar/references/: cards.public-weekly.yaml  cards.yaml  config.example.yaml  profile.public-weekly.yaml  profile.yaml  sources.yaml
plugins/loyalty-radar/skills/loyalty-radar/references/locales/: en.yaml  zh-CN.yaml
plugins/loyalty-radar/skills/loyalty-radar/references/schemas/: config.schema.json  public-report.schema.json  report.schema.json  source-pack.schema.json
plugins/loyalty-radar/skills/loyalty-radar/references/source-packs/: core.yaml  experimental.yaml  forums-cn.yaml  forums-global.yaml  industry.yaml
plugins/loyalty-radar/skills/loyalty-radar/scripts/: run_digest.py
plugins/loyalty-radar/skills/loyalty-radar/scripts/loyalty_radar/: __init__.py  classification.py  cli.py  clustering.py  collectors.py  config.py  doctor.py  engine.py  health.py  i18n.py  models.py  paths.py  (+6 more)
public-briefs/2026-W29/: report.json
public-briefs/2026-W30/: report.json
tests/: test_growth_automation.py  test_legacy_engine.py  test_public_api.py  test_public_interfaces.py  test_release_hygiene.py  test_source_health.py
tools/: build_public_site.py  build_source_packs.py
